--- a/bedroom.html
+++ b/bedroom.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Object Detection</title>
+        <title>Bedroom</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -8,22 +8,16 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.js"></script>
         <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
   
-        <link rel="stylesheet" type="text/css" href="style.css">
-
+        <link rel="stylesheet" type="text/css" href="All.css">
     </head>
-    <body background="main_bg.jpg">
+    <body background="background.jpg">
         <center>
-            <h1 class="btn btn-info heading">Object Detection Web App</h1>
+            <h1 class="btn btn-info heading">Object Detection - Bedroom</h1>
             <br>
+            <button onclick="back()" id="back_button" class="btn btn-success">Back</button>
             <br>
-            <button class="a_tag "><a href="Hall.html">Hall</a></button>
-            <br>
-            <button class="a_tag"><a href="bedroom.html">Bedroom</a></button>
-            <br>
-            <button class="a_tag"><a href="bottle.html">Bottles</a></button>
-            <br>
-            <button class="a_tag"><a href="Desk.html">Desk</a></button>
-            
+            <h1 class="btn btn-success" id="status"></h1>
         </center>
+        <script src="bedroom.js"></script>
     </body>
 </html>
